@@ -25,3 +25,4 @@
 20041223 2.07 eliminate octals from JS strings, for ECMAscript-3
 20050105 EXPORT_OK and ALL introduced for str2ascii and ascii2str
 20050113 2.08 test.pl uses Test::Simple
+20050114 2.09 algorithm cut out of MANIFEST, sub ascii2str gets no warnings
